feat: Allow to display connected Hubs in Website - MEED-2392 - Meeds-io/MIPs#58